--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,7 @@
                   <option value="teen" {% if requested_age == 'teen' %}selected{% endif %}>Teen</option>
                   <option value="young adult" {% if requested_age == 'young adult' %}selected{% endif %}>Young Adult</option>
                   <option value="adult" {% if requested_age == 'adult' %}selected{% endif %}>Adult</option>
+                  <option value="custom" {% if requested_age == 'custom' %}selected{% endif %}>Custom</option>
                   </select>
                   <button type="submit" class="btn btn-primary px-4">
                   Apply Filter
